Restructured utility nav - added region with template, stylesheet and js, and removed module, reversed header styling changes, changed header size variables

--- a/config/sata_us/default/block.block.headersearchblock.yml
+++ b/config/sata_us/default/block.block.headersearchblock.yml
@@ -1,6 +1,6 @@
-uuid: c7b39b1f-b22d-42b8-94be-834c69e69ba8
+uuid: 63611e0b-8f4c-48e7-b8f2-cd1854ee14f8
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - block_class
@@ -10,10 +10,10 @@ dependencies:
 third_party_settings:
   block_class:
     classes: block--header-search
-id: header_search_block
+id: headersearchblock
 theme: sata
-region: header
-weight: -7
+region: utility_area
+weight: 0
 provider: null
 plugin: header_search
 settings:
