--- a/docroot/themes/custom/sata/sata.info.yml
+++ b/docroot/themes/custom/sata/sata.info.yml
@@ -14,6 +14,7 @@ libraries-extend:
 
 regions:
   page_top: 'Page top'
+  utility_area: 'Utility Area'
   header: 'Header'
   pre_content: 'Pre-content'
   content: Content
