--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -526,6 +526,19 @@ region:
     component:
       css/libraries/region/default.css: {}
 
+# Utility Area #
+region--utility-area:
+  version: 1.x
+  css:
+    component:
+      css/libraries/region/utility-area.css: {}
+  js:
+    js/libraries/region/utility-area.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+
 # Header #
 region--header:
   version: 1.x
