Updated section colors for all SATA countries, added patch to remove gear icon from field group settings color buttons,

--- a/composer.json
+++ b/composer.json
@@ -282,6 +282,9 @@
             "drupal/field_group": {
                 "https://www.drupal.org/node/3059614": "https://www.drupal.org/files/issues/2020-06-15/3059614-37.patch"
             },
+            "drupal/field_group_settings": {
+                "https://www.drupal.org/project/field_group_settings/issues/3302961": "https://www.drupal.org/files/issues/2022-08-10/3302961_1_button-fix.diff"
+            },
             "drupal/field_states_ui": {
                 "https://www.drupal.org/node/3166929": "https://www.drupal.org/files/issues/2020-08-24/3166929-0.patch",
                 "https://www.drupal.org/node/3212229": "https://www.drupal.org/files/issues/2021-05-04/3212229-04.patch"
