--- a/config/sata_colombia/default/field.field.paragraph.section.field_background_color.yml
+++ b/config/sata_colombia/default/field.field.paragraph.section.field_background_color.yml
@@ -18,7 +18,7 @@ translatable: true
 default_value:
   -
     color: '#ffffff'
-    opacity: 0.6
+    opacity: !!float 1
 default_value_callback: ''
 settings:
   opacity: 1
