--- a/config/sata_us/default/core.entity_form_display.paragraph.section.default.yml
+++ b/config/sata_us/default/core.entity_form_display.paragraph.section.default.yml
@@ -44,7 +44,7 @@ content:
     weight: 10
     region: content
     settings:
-      default_colors: '#ffffff,#f4f5f5,#e9eceb,#d4d8d7,#b4bbb9,#949e9b,#eb8900'
+      default_colors: '#ffffff,#f4f5f5,#27251f,#ffb81c'
     third_party_settings: {  }
   field_class_custom:
     type: string_textfield
