feature/VYRKCATG-459: Added in the category facet mapping.

--- a/docroot/modules/custom/sata_us_migrations/config/install/migrate_plus.migration.sata_us_product_category_pages_level_two.yml
+++ b/docroot/modules/custom/sata_us_migrations/config/install/migrate_plus.migration.sata_us_product_category_pages_level_two.yml
@@ -1,3 +1,4 @@
+uuid: fa9dd443-9afa-4c51-b05c-298c95356e33
 langcode: en
 status: true
 dependencies: {  }
@@ -43,70 +44,98 @@ process:
     source: remote_id
     method: row
     value:
-      - W2_743935
-      - W2_743936
-      - W2_743934
-      - W2_743931
-      - W2_743937
-      - W2_743935
-      - W2_743936
-      - W2_743934
-      - W2_743931
-      - W2_743933
-      - W2_743937
-      - W2_743832
-      - W2_743838
-      - W2_743943
-      - W2_743906
-      - W2_743907
-      - W2_743908
-      - W2_743884
-      - W2_743885
-      - W2_743879
-      - W2_743882
-      - W2_743881
-      - W2_743883
-      - W2_743880
-      - W2_743887
-      - W2_743918
-      - W2_743919
-      - W2_743954
-      - W2_743955
-      - W2_743809
-      - W2_743808
-      - W2_743805
-      - W2_743804
-      - W2_743806
-      - W2_743807
-      - W2_743952
-      - W2_743869
-      - W2_743873
-      - W2_743868
-      - W2_774131
-      - W2_743820
-      - W2_743821
-      - W2_743822
-      - W2_743823
-      - W2_743824
-      - W2_743826
-      - W2_743825
-      - W2_744933
-      - W2_743912
-      - W2_743913
-      - W2_743773
-      - W2_743774
-      - W2_743775
-      - W2_743776
-      - W2_743777
-      - W2_743778
-      - W2_743789
-      - W2_743794
-      - W2_743792
-      - W2_743785
-      - W2_743861
-      - W2_743862
-      - W2_743847
-      - W2_743853
+      - W2_852367
+      - W2_852368
+      - W2_852442
+      - W2_852443
+      - W2_852444
+      - W2_852445
+      - W2_852446
+      - W2_852447
+      - W2_852448
+      - W2_852449
+      - W2_852450
+      - W2_852451
+      - W2_852452
+      - W2_852453
+      - W2_852454
+      - W2_852456
+      - W2_852465
+      - W2_852466
+      - W2_848680
+      - W2_848683
+      - W2_848684
+      - W2_848685
+      - W2_848686
+      - W2_848687
+      - W2_852457
+      - W2_852458
+      - W2_852395
+      - W2_852396
+      - W2_852397
+      - W2_852399
+      - W2_852400
+      - W2_852401
+      - W2_867885
+      - W2_852402
+      - W2_852403
+      - W2_852404
+      - W2_852374
+      - W2_852376
+      - W2_852377
+      - W2_852378
+      - W2_852379
+      - W2_852380
+      - W2_852381
+      - W2_852382
+      - W2_852383
+      - W2_852405
+      - W2_852408
+      - W2_852409
+      - W2_852410
+      - W2_852411
+      - W2_852412
+      - W2_852413
+      - W2_852419
+      - W2_852425
+      - W2_852393
+      - W2_852394
+      - W2_852460
+      - W2_852461
+      - W2_852459
+      - W2_852463
+      - W2_852464
+      - W2_852388
+      - W2_852389
+      - W2_852390
+      - W2_852391
+      - W2_852369
+      - W2_852370
+      - W2_852371
+      - W2_852372
+      - W2_852384
+      - W2_852385
+      - W2_852386
+      - W2_852387
+      - W2_848690
+      - W2_848691
+      - W2_848692
+      - W2_848963
+      - W2_848574
+      - W2_848575
+      - W2_848576
+      - W2_848577
+      - W2_848578
+      - W2_848580
+      - W2_848581
+      - W2_848582
+      - W2_848572
+      - W2_848573
+      - W2_846468
+      - W2_848165
+      - W2_848166
+      - W2_848168
+      - W2_848169
   type:
     plugin: default_value
     default_value: product_category
@@ -142,23 +171,17 @@ process:
     plugin: apex_determine_set_filter_show
     source: remote_id
     allowed_categories:
-      - W2_736544
-      - W2_736540
-      - W2_736541
-      - W2_736542
-      - W2_736543
-      - W2_736547
-      - W2_736546
-      - W2_736542
-      - W2_736540
-      - W2_736543
-      - W2_736541
-      - W2_736544
-      - W2_736547
-      - W2_736546
-      - W2_15804
-      - W2_787570
-      - W2_16111
+      - W2_852368
+      - W2_848686
+      - W2_852395
+      - W2_867885
+      - W2_852412
+      - W2_852460
+      - W2_852461
+      - W2_852459
+      - W2_852463
+      - W2_852464
+      - W2_852386
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
