--- a/docroot/modules/custom/sata_us_migrations/config/install/migrate_plus.migration.sata_us_product_classifications_level_one.yml
+++ b/docroot/modules/custom/sata_us_migrations/config/install/migrate_plus.migration.sata_us_product_classifications_level_one.yml
@@ -1,3 +1,4 @@
+uuid: 0f9064c6-eb58-40d5-a4bc-bafe379c2946
 langcode: en
 status: true
 dependencies: {  }
@@ -42,25 +43,24 @@ process:
     source: remote_term_id
     method: row
     value:
-      - W1_743930
-      - W1_743899
-      - W1_743831
-      - W1_743769
-      - W1_743784
-      - W1_743905
-      - W1_743878
-      - W1_743917
-      - W1_743927
-      - W1_743953
-      - W1_743803
-      - W1_743867
-      - W1_743771
-      - W1_743819
-      - W1_743911
-      - W1_743772
-      - W1_743786
-      - W1_743860
-      - W1_743846
+      - W1_846447
+      - W1_846444
+      - W1_846459
+      - W1_846450
+      - W1_846451
+      - W1_846452
+      - W1_846458
+      - W1_846454
+      - W1_846455
+      - W1_846456
+      - W1_846457
+      - W1_846460
+      - W1_846461
+      - W1_846463
+      - W1_846464
+      - W1_846465
+      - W1_846466
+      - W1_846467
 destination:
   plugin: 'entity:taxonomy_term'
 migration_dependencies: null
