EMEA: removed utility nav block header

--- a/config/sata_emea/default/block.block.headerutilitynav.yml
+++ b/config/sata_emea/default/block.block.headerutilitynav.yml
@@ -21,7 +21,7 @@ plugin: 'system_menu_block:header-utility-nav'
 settings:
   id: 'system_menu_block:header-utility-nav'
   label: 'Header Utility Nav'
-  label_display: visible
+  label_display: '0'
   provider: system
   level: 1
   depth: 0
