--- a/.docksal/docksal.yml
+++ b/.docksal/docksal.yml
@@ -22,7 +22,8 @@ services:
       service: solr
   cli:
     environment:
-      - XDEBUG_CONFIG=remote_connect_back=0 remote_host=${DOCKSAL_HOST_IP}
+      - XDEBUG_CONFIG=client_host=${DOCKSAL_HOST_IP} client_port=9000
+      - XDEBUG_MODE=debug
       - PHP_IDE_CONFIG=serverName=${VIRTUAL_HOST}
       - DRUSH_ALLOW_XDEBUG=${XDEBUG_ENABLED:-0}
       - DRUSH_OPTIONS_URI=${VIRTUAL_HOST}
