--- a/config/sata_us/default/field.field.node.page.field_components.yml
+++ b/config/sata_us/default/field.field.node.page.field_components.yml
@@ -16,7 +16,6 @@ dependencies:
     - paragraphs.paragraphs_type.featured_content
     - paragraphs.paragraphs_type.featured_links
     - paragraphs.paragraphs_type.featured_media
-    - paragraphs.paragraphs_type.hero
     - paragraphs.paragraphs_type.product_slider
     - paragraphs.paragraphs_type.section
     - paragraphs.paragraphs_type.steps
@@ -48,7 +47,6 @@ settings:
       featured_content: featured_content
       featured_links: featured_links
       featured_media: featured_media
-      hero: hero
       product_slider: product_slider
       section: section
       steps: steps
@@ -96,7 +94,7 @@ settings:
         enabled: true
       hero:
         weight: -33
-        enabled: true
+        enabled: false
       hero_slide:
         weight: -32
         enabled: false
