Added sata product category filtering module, updated teaser product styling, changed stage file proxy to dev

--- a/config/sata_brazil/local/core.extension.yml
+++ b/config/sata_brazil/local/core.extension.yml
@@ -129,6 +129,7 @@ module:
   robotstxt: 0
   sata_brazil_migrations: 0
   sata_core: 0
+  sata_product_category_filtering: 0
   schema_metatag: 0
   schema_product: 0
   search: 0
