--- a/config/sata_colombia/local/stage_file_proxy.settings.yml
+++ b/config/sata_colombia/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
-origin: 'https://username:password@stg-www.sata.com.co'
+origin: 'https://username:password@dev-www.sata.com.co'
 origin_dir: sites/sata_colombia/files
 use_imagecache_root: true
 verify: false
