--- a/config/sata_us/local/core.extension.yml
+++ b/config/sata_us/local/core.extension.yml
@@ -128,6 +128,7 @@ module:
   rest: 0
   robotstxt: 0
   sata_core: 0
+  sata_product_category_filtering: 0
   sata_us_migrations: 0
   schema_metatag: 0
   schema_product: 0
