--- a/config/sata_us/local/stage_file_proxy.settings.yml
+++ b/config/sata_us/local/stage_file_proxy.settings.yml
@@ -1,5 +1,5 @@
 hotlink: false
-origin: 'https://username:password@stg-www.satatools.us'
+origin: 'https://username:password@dev-www.satatools.us'
 origin_dir: sites/sata_us/files
 use_imagecache_root: true
 verify: false
