--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -299,7 +299,7 @@ node--tile--product-listing:
     component:
       css/libraries/node/tile--product-listing.css: { }
 
-# === Node: Teaser === #
+# === Node: Set Listing === #
 
 node--set-listing--product:
   version: 1.x
