--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -288,6 +288,14 @@ node--tile:
     component:
       css/libraries/node/tile.css: { }
 
+# === Node: Set Listing === #
+
+node--set-listing--product:
+  version: 1.x
+  css:
+    component:
+      css/libraries/node/set-listing--product.css: { }
+
 # ========= Paragraphs ========= #
 
 # === Paragraph: Full === #
