feature/sata_emea_imports: Added the configuration for the EMEA imports.

--- a/docroot/modules/custom/sata_emea_migrations/config/install/migrate_plus.migration.sata_emea_product_category_pages_level_one.yml
+++ b/docroot/modules/custom/sata_emea_migrations/config/install/migrate_plus.migration.sata_emea_product_category_pages_level_one.yml
@@ -1,3 +1,4 @@
+uuid: 8abb7cf6-b848-4177-ada7-c8efec16b5a3
 langcode: en
 status: true
 dependencies: {  }
@@ -39,25 +40,30 @@ process:
     source: remote_id
     method: row
     value:
-      - W1_743930
-      - W1_743899
-      - W1_743831
-      - W1_743769
-      - W1_743784
-      - W1_743905
-      - W1_743878
-      - W1_743917
-      - W1_743927
-      - W1_743953
-      - W1_743803
-      - W1_743867
-      - W1_743771
-      - W1_743819
-      - W1_743911
-      - W1_743772
-      - W1_743786
-      - W1_743860
-      - W1_743846
+      - W1_760608
+      - W1_867137
+      - W1_867138
+      - W1_867150
+      - W1_867164
+      - W1_867165
+      - W1_760609
+      - W1_760614
+      - W1_867199
+      - W1_867206
+      - W1_760615
+      - W1_760618
+      - W1_760610
+      - W1_843924
+      - W1_760612
+      - W1_760616
+      - W1_824996
+      - W1_760613
+      - W1_867362
+      - W1_867365
+      - W1_867366
+      - W1_760617
+      - W1_760619
+      - W1_867565
   type:
     plugin: default_value
     default_value: product_category
@@ -94,20 +100,16 @@ process:
     plugin: apex_determine_set_filter_show
     source: remote_id
     allowed_categories:
-      - W1_743930
-      - W1_743899
-      - W1_743831
-      - W1_743905
-      - W1_743878
-      - W1_743917
-      - W1_743927
-      - W1_743953
-      - W1_743803
-      - W1_743867
-      - W1_743819
-      - W1_743911
-      - W1_743860
-      - W1_743846
+      - W1_867138
+      - W1_867150
+      - W1_760609
+      - W1_760614
+      - W1_760610
+      - W1_843924
+      - W1_867366
+      - W1_760617
+      - W1_760619
+      - W1_867565
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
