--- a/docroot/modules/custom/sata_emea_migrations/config/install/migrate_plus.migration.sata_emea_product_specifications.yml
+++ b/docroot/modules/custom/sata_emea_migrations/config/install/migrate_plus.migration.sata_emea_product_specifications.yml
@@ -1,3 +1,4 @@
+uuid: a85c54bb-f1b5-449c-8f69-ad3e12a7e360
 langcode: en
 status: true
 dependencies: {  }
@@ -44,70 +45,91 @@ process:
       method: row
       source: remote_term_id
       value:
-        - ATT496
-        - ATT806600
-        - ATT802893
-        - ATT804086
-        - ATT686141
-        - ATT807126
-        - ATT807127
-        - ATT753947
-        - ATT806593
-        - ATT484
-        - ATT499
-        - ATT493
-        - ATT415
-        - ATT807193
-        - ATT491
-        - ATT714694
-        - ATT584
-        - ATT586
-        - ATT749756
-        - ATT593
-        - ATT583
-        - ATT755881
-        - ATT753929
-        - ATT584827
-        - ATT592
-        - ATT585
-        - ATT589
-        - ATT660
-        - ATT115
-        - ATT259
-        - ATT278
-        - ATT880
-        - ATT451
-        - ATT582
-        - ATT340
+        - ATT128
         - ATT130
-        - ATT744972
-        - ATT744973
-        - ATT806802
-        - ATT739685
-        - ATT739684
-        - ATT159
-        - ATT345
+        - ATT145
+        - ATT176
+        - ATT185
+        - ATT205
+        - ATT22507
         - ATT226
         - ATT227
+        - ATT235
+        - ATT254
+        - ATT27860
+        - ATT345
+        - ATT415
+        - ATT420
+        - ATT425
+        - ATT428
+        - ATT451
+        - ATT491
+        - ATT493
+        - ATT497
+        - ATT498
+        - ATT499
+        - ATT531
+        - ATT535
+        - ATT544
+        - ATT563
+        - ATT583
+        - ATT584466
+        - ATT584477
+        - ATT584720
+        - ATT584724
+        - ATT584772
+        - ATT584804
+        - ATT584826
+        - ATT584890
+        - ATT584933
+        - ATT585
+        - ATT589
+        - ATT622
         - ATT631
-        - ATT205
-        - ATT228
-        - ATT127
-        - ATT710
-        - ATT763883
+        - ATT661605
+        - ATT661950
+        - ATT670486
+        - ATT672487
+        - ATT673955
+        - ATT683449
+        - ATT683454
+        - ATT714694
+        - ATT714709
+        - ATT714722
+        - ATT714731
+        - ATT714732
+        - ATT725
+        - ATT726
         - ATT769436
-        - ATT778642
-        - ATT934
-        - ATT201
-        - ATT547
-        - ATT659
-        - ATT714716
-        - ATT714720
-        - ATT783458
-        - ATT83507
-        - ATT783498
-        - ATT783499
-        - ATT83508
+        - ATT789490
+        - ATT789979
+        - ATT803
+        - ATT834
+        - ATT835
+        - ATT837657
+        - ATT838020
+        - ATT838034
+        - ATT867472
+        - ATT867475
+        - ATT867573
+        - ATT867574
+        - ATT867575
+        - ATT867577
+        - ATT867578
+        - ATT867580
+        - ATT867581
+        - ATT867582
+        - ATT867585
+        - ATT867587
+        - ATT867591
+        - ATT867592
+        - ATT867594
+        - ATT867595
+        - ATT867596
+        - ATT923
+        - ATT931
+        - ATT940
+        - ATT948
     -
       plugin: concat
       source:
