--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_three.yml
@@ -1,3 +1,4 @@
+uuid: 50924edd-3337-4adb-9255-847937e0b750
 langcode: en
 status: true
 dependencies: {  }
@@ -46,30 +47,110 @@ process:
     source: remote_term_id
     method: row
     value:
-      - W3_743836
-      - W3_743834
-      - W3_743833
-      - W3_743835
-      - W3_743839
-      - W3_743840
-      - W3_743841
-      - W3_743810
-      - W3_743811
-      - W3_743812
-      - W3_743813
-      - W3_743815
-      - W3_743870
-      - W3_743872
-      - W3_743795
-      - W3_743797
-      - W3_743848
-      - W3_743849
-      - W3_743851
-      - W3_743850
-      - W3_743852
-      - W3_743855
-      - W3_743854
-      - W3_743856
+      - W3_777734
+      - W3_777735
+      - W3_777817
+      - W3_777818
+      - W3_777819
+      - W3_777820
+      - W3_777822
+      - W3_777823
+      - W3_777824
+      - W3_777825
+      - W4_777747
+      - W3_777759
+      - W3_777736
+      - W3_788105
+      - W3_777738
+      - W3_777753
+      - W3_777737
+      - W3_777752
+      - W3_777758
+      - W3_777761
+      - W3_777763
+      - W3_777764
+      - W3_777765
+      - W3_777768
+      - W3_799005
+      - W3_799006
+      - W3_777739
+      - W3_777770
+      - W3_777787
+      - W3_777815
+      - W3_777821
+      - W3_777835
+      - W3_777836
+      - W3_777838
+      - W3_777740
+      - W3_777745
+      - W3_777746
+      - W3_777747
+      - W3_777741
+      - W3_777742
+      - W3_777748
+      - W3_777750
+      - W3_777743
+      - W3_777744
+      - W3_777786
+      - W3_777749
+      - W3_777739
+      - W3_777776
+      - W3_777777
+      - W3_777790
+      - W3_777794
+      - W3_777804
+      - W3_777812
+      - W3_777751
+      - W3_777754
+      - W3_777755
+      - W3_777756
+      - W3_777757
+      - W3_777760
+      - W3_777769
+      - W3_777771
+      - W3_777772
+      - W3_777777
+      - W3_777776
+      - W3_777775
+      - W3_777843
+      - W3_799009
+      - W3_799010
+      - W3_777810
+      - W3_777811
+      - W3_777813
+      - W3_777814
+      - W3_777816
+      - W3_777779
+      - W3_777780
+      - W3_777782
+      - W3_777783
+      - W3_777784
+      - W3_777833
+      - W3_777785
+      - W3_777790
+      - W3_777791
+      - W3_777792
+      - W3_777794
+      - W4_777743
+      - W3_777797
+      - W3_777798
+      - W4_777741
+      - W4_777744
+      - W4_777745
+      - W3_777834
+      - W3_777840
+      - W3_777842
+      - W3_807286
+      - W3_777799
+      - W3_777800
+      - W3_777801
+      - W3_777802
+      - W3_777803
+      - W3_777829
+      - W3_777826
+      - W3_777827
+      - W3_777837
+      - W3_777839
 destination:
   plugin: 'entity:taxonomy_term'
   default_bundle: product_classifications
