--- a/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_one.yml
+++ b/docroot/modules/custom/sata_brazil_migrations/config/install/migrate_plus.migration.sata_brazil_product_classifications_level_one.yml
@@ -1,3 +1,4 @@
+uuid: 70cfbd72-e4d6-4b0a-a28a-bcef050aa680
 langcode: en
 status: true
 dependencies: {  }
@@ -42,25 +43,8 @@ process:
     source: remote_term_id
     method: row
     value:
-      - W1_743930
-      - W1_743899
-      - W1_743831
-      - W1_743769
-      - W1_743784
-      - W1_743905
-      - W1_743878
-      - W1_743917
-      - W1_743927
-      - W1_743953
-      - W1_743803
-      - W1_743867
-      - W1_743771
-      - W1_743819
-      - W1_743911
-      - W1_743772
-      - W1_743786
-      - W1_743860
-      - W1_743846
+      - W1_777147
+      - W1_777148
 destination:
   plugin: 'entity:taxonomy_term'
 migration_dependencies: null
