feature/sata_brazil_imports: Set a batch size for EMEA product imports.

--- a/config/sata_emea/default/migrate_plus.migration.sata_emea_products.yml
+++ b/config/sata_emea/default/migrate_plus.migration.sata_emea_products.yml
@@ -10,6 +10,7 @@ migration_tags: null
 migration_group: sata_emea
 label: Products
 source:
+  batch_size: 100
   constants:
     bool_0: 0
     bool_1: 1
