feature/imports_improvements: Making improvements to our import processes.

--- a/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_products.yml
+++ b/config/gearwrench_au/default/migrate_plus.migration.gearwrench_au_products.yml
@@ -12,6 +12,7 @@ migration_tags: null
 migration_group: gearwrench_au
 label: Products
 source:
+  batch_size: 100
   constants:
     bool_0: 0
     bool_1: 1
