--- a/docroot/modules/custom/sata_colombia_migrations/config/install/migrate_plus.migration.sata_colombia_products.yml
+++ b/docroot/modules/custom/sata_colombia_migrations/config/install/migrate_plus.migration.sata_colombia_products.yml
@@ -1,3 +1,4 @@
+uuid: 7a94000a-529e-4ed9-98ce-a4b28c78c836
 langcode: en
 status: true
 dependencies: {  }
@@ -9,6 +10,7 @@ migration_tags: null
 migration_group: sata_colombia
 label: Products
 source:
+  batch_size: 100
   constants:
     bool_0: 0
     bool_1: 1
@@ -159,211 +161,20 @@ process:
     plugin: apex_create_product_specifications
     source: remote_product_specifications
     allowed_attributes:
-      - ATT115
-      - ATT125
-      - ATT128
-      - ATT132
-      - ATT159
-      - ATT170
-      - ATT17712
-      - ATT178
-      - ATT179
-      - ATT190
-      - ATT194
-      - ATT196
-      - ATT201
-      - ATT205
-      - ATT22085
-      - ATT22086
-      - ATT22087
-      - ATT22088
-      - ATT22089
-      - ATT224
-      - ATT22443
-      - ATT225
-      - ATT226
-      - ATT227
-      - ATT228
-      - ATT232
-      - ATT235
-      - ATT236
-      - ATT238
-      - ATT239
-      - ATT251
-      - ATT254
-      - ATT256
-      - ATT259
-      - ATT301
-      - ATT326
-      - ATT336
-      - ATT345
-      - ATT349
-      - ATT351
-      - ATT374
-      - ATT387
-      - ATT410
-      - ATT450
-      - ATT451
-      - ATT466
-      - ATT468
-      - ATT471
-      - ATT473
-      - ATT476
-      - ATT477
-      - ATT478
-      - ATT479
-      - ATT480
-      - ATT481
-      - ATT484
-      - ATT491
-      - ATT492
-      - ATT493
-      - ATT494
-      - ATT495
-      - ATT496
-      - ATT497
-      - ATT499
-      - ATT500
-      - ATT501
-      - ATT503
-      - ATT504
-      - ATT505
-      - ATT506
-      - ATT507
-      - ATT509
-      - ATT510
-      - ATT518
-      - ATT523
-      - ATT525
-      - ATT532
-      - ATT534
-      - ATT535
-      - ATT536
-      - ATT537
-      - ATT538
-      - ATT539
-      - ATT541
-      - ATT547
-      - ATT548
-      - ATT549
-      - ATT550
-      - ATT551
-      - ATT552
-      - ATT563
-      - ATT564
-      - ATT565
-      - ATT575
-      - ATT581
-      - ATT582
-      - ATT583
-      - ATT584
-      - ATT584730
-      - ATT584731
-      - ATT584734
-      - ATT584737
-      - ATT584868
-      - ATT584927
-      - ATT585
-      - ATT586
-      - ATT587
-      - ATT588
-      - ATT589
-      - ATT590
-      - ATT591
-      - ATT592
-      - ATT593
-      - ATT606
-      - ATT607
-      - ATT608
-      - ATT609
-      - ATT610
-      - ATT612
-      - ATT613
-      - ATT614
-      - ATT631
-      - ATT633
-      - ATT634
-      - ATT635
-      - ATT659132
-      - ATT659133
-      - ATT660
-      - ATT660051
-      - ATT660052
-      - ATT664101
-      - ATT678641
-      - ATT684692
-      - ATT689
-      - ATT693
-      - ATT708
-      - ATT709
-      - ATT710
-      - ATT714694
-      - ATT714714
-      - ATT714716
-      - ATT714720
-      - ATT714721
-      - ATT714725
-      - ATT714731
-      - ATT728
-      - ATT729
-      - ATT749756
-      - ATT755881
-      - ATT767142
-      - ATT777456
-      - ATT783458
-      - ATT783482
-      - ATT783483
-      - ATT783491
-      - ATT783492
-      - ATT783498
-      - ATT783499
-      - ATT789979
-      - ATT802893
-      - ATT804086
-      - ATT806600
-      - ATT807126
-      - ATT807127
-      - ATT807194
-      - ATT818
-      - ATT820
-      - ATT833
-      - ATT835
-      - ATT83507
-      - ATT83508
-      - ATT836
-      - ATT840
-      - ATT841
-      - ATT843
-      - ATT844
-      - ATT894
-      - ATT907
-      - ATT912
-      - ATT913
-      - ATT914
-      - ATT915
-      - ATT922
-      - ATT923
-      - ATT929
-      - ATT936
-      - ATT943
       - ATT948
-      - ATT950
-      - Footnotes
-      - ForeignTrade
-      - JawThicknessLower
-      - JawThicknessUpper
-      - JawWidthLower
-      - JawWidthUpper
-      - ATT415
-      - ATT880
-      - ATT753929
+      - ATT493
+      - ATT584466
       - ATT744972
-      - ATT744973
-      - ATT806802
-      - ATT659
-      - ATT753947
-      - ATT739684
-      - ATT739685
+      - ATT755881
+      - ATT687593
+      - ATT345
+      - ATT425
+      - ATT176
+      - ATT435
+      - ATT673673
+      - ATT497
+      - ATT420
+      - ATT835
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
