feature/VYRKCATG-497: Fixed a lot of config settings for the SATA sites. Also added a product features import improvement for long entries.

--- a/config/sata_brazil/default/search_api.index.acquia_search_index.yml
+++ b/config/sata_brazil/default/search_api.index.acquia_search_index.yml
@@ -224,7 +224,7 @@ field_settings:
     boost: 0.5
     configuration:
       roles:
-        anonymous: anonymous
+        - anonymous
       view_mode:
         'entity:node':
           landing_page: full
