--- a/config/sata_colombia/default/search_api.index.acquia_search_index.yml
+++ b/config/sata_colombia/default/search_api.index.acquia_search_index.yml
@@ -224,7 +224,7 @@ field_settings:
     boost: 0.5
     configuration:
       roles:
-        anonymous: anonymous
+        - anonymous
       view_mode:
         'entity:node':
           landing_page: full
