--- a/config/sata_colombia/default/user.role.authenticated.yml
+++ b/config/sata_colombia/default/user.role.authenticated.yml
@@ -8,6 +8,7 @@ dependencies:
     - filter
     - media
     - node_view_permissions
+    - paragraphs
     - search
     - shortcut
     - system
@@ -24,5 +25,21 @@ permissions:
   - 'search content'
   - 'skip comment approval'
   - 'use text format limited_html'
+  - 'view any landing_page content'
+  - 'view any media_page content'
+  - 'view any page content'
+  - 'view any product content'
+  - 'view any product_category content'
+  - 'view any product_industry content'
+  - 'view any social_post content'
   - 'view any styleguide content'
   - 'view media'
+  - 'view own landing_page content'
+  - 'view own media_page content'
+  - 'view own page content'
+  - 'view own product content'
+  - 'view own product_category content'
+  - 'view own product_industry content'
+  - 'view own social_post content'
+  - 'view own styleguide content'
+  - 'view unpublished paragraphs'
