--- a/config/sata_us/default/user.role.site_administrator.yml
+++ b/config/sata_us/default/user.role.site_administrator.yml
@@ -10,25 +10,36 @@ dependencies:
     - media.type.file
     - media.type.image
     - media.type.remote_video
+    - node.type.landing_page
+    - node.type.media_page
     - node.type.page
+    - node.type.product
+    - node.type.product_category
+    - node.type.product_industry
+    - node.type.styleguide
+    - taxonomy.vocabulary.media_page_categories
+    - taxonomy.vocabulary.product_industry
     - taxonomy.vocabulary.tags
   module:
+    - admin_toolbar_search
+    - blazy_ui
     - block
-    - block_class
     - contextual
     - environment_indicator
+    - field_group_settings
     - file
     - filter
     - media
     - menu_link_attributes
     - node
-    - paragraphs
     - path
+    - quick_node_clone
     - redirect
     - search
     - system
     - taxonomy
     - toolbar
+    - webform
 id: site_administrator
 label: 'Site Administrator'
 weight: 3
@@ -45,7 +56,10 @@ permissions:
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'access user profiles'
-  - 'administer block classes'
+  - 'access webform help'
+  - 'access webform overview'
+  - 'access webform submission user'
+  - 'administer blazy'
   - 'administer blocks'
   - 'administer menu'
   - 'administer nodes'
@@ -53,46 +67,87 @@ permissions:
   - 'administer redirects'
   - 'administer url aliases'
   - 'administer users'
+  - 'administer webform'
+  - 'administer webform element access'
+  - 'bypass field_group_settings field visibility'
   - 'bypass node access'
+  - 'clone landing_page content'
+  - 'clone media_page content'
+  - 'clone page content'
+  - 'clone product_industry content'
   - 'create audio media'
   - 'create file media'
   - 'create image media'
+  - 'create landing_page content'
   - 'create media'
+  - 'create media_page content'
   - 'create page content'
+  - 'create product_industry content'
   - 'create remote_video media'
+  - 'create terms in media_page_categories'
+  - 'create terms in product_industry'
   - 'create terms in tags'
   - 'create url aliases'
+  - 'create webform'
   - 'delete all revisions'
   - 'delete any audio media'
   - 'delete any file media'
   - 'delete any image media'
+  - 'delete any landing_page content'
   - 'delete any media'
+  - 'delete any media_page content'
   - 'delete any page content'
+  - 'delete any product_industry content'
   - 'delete any remote_video media'
+  - 'delete landing_page revisions'
   - 'delete media'
+  - 'delete media_page revisions'
   - 'delete own audio media'
   - 'delete own file media'
   - 'delete own image media'
+  - 'delete own landing_page content'
+  - 'delete own media_page content'
   - 'delete own page content'
+  - 'delete own product_industry content'
   - 'delete own remote_video media'
+  - 'delete own webform'
   - 'delete page revisions'
+  - 'delete product_industry revisions'
+  - 'delete terms in media_page_categories'
+  - 'delete terms in product_industry'
   - 'delete terms in tags'
   - 'edit any audio media'
   - 'edit any file media'
   - 'edit any image media'
+  - 'edit any landing_page content'
+  - 'edit any media_page content'
   - 'edit any page content'
+  - 'edit any product content'
+  - 'edit any product_category content'
+  - 'edit any product_industry content'
   - 'edit any remote_video media'
+  - 'edit any styleguide content'
   - 'edit own audio media'
   - 'edit own file media'
   - 'edit own image media'
+  - 'edit own landing_page content'
+  - 'edit own media_page content'
   - 'edit own page content'
+  - 'edit own product_industry content'
   - 'edit own remote_video media'
+  - 'edit own styleguide content'
+  - 'edit terms in media_page_categories'
+  - 'edit terms in product_industry'
   - 'edit terms in tags'
   - 'link to any page'
   - 'revert all revisions'
+  - 'revert landing_page revisions'
+  - 'revert media_page revisions'
   - 'revert page revisions'
+  - 'revert product_industry revisions'
   - 'update any media'
   - 'update media'
+  - 'use admin toolbar search'
   - 'use advanced search'
   - 'use menu link attributes'
   - 'use text format basic_html'
@@ -100,7 +155,9 @@ permissions:
   - 'use text format restricted_html'
   - 'view all media revisions'
   - 'view all revisions'
+  - 'view landing_page revisions'
+  - 'view media_page revisions'
   - 'view own unpublished content'
   - 'view page revisions'
+  - 'view product_industry revisions'
   - 'view the administration theme'
-  - 'view unpublished paragraphs'
