--- a/config/sata_us/default/user.role.content_editor.yml
+++ b/config/sata_us/default/user.role.content_editor.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - filter.format.basic_html
     - filter.format.full_html
+    - filter.format.restricted_html
     - media.type.audio
     - media.type.file
     - media.type.image
@@ -114,14 +115,16 @@ permissions:
   - 'edit terms in media_page_categories'
   - 'edit terms in product_industry'
   - 'edit terms in tags'
-  - 'link to any page'
   - 'revert all revisions'
   - 'revert landing_page revisions'
   - 'revert media_page revisions'
   - 'revert page revisions'
   - 'revert product_industry revisions'
+  - 'update any media'
+  - 'update media'
   - 'use text format basic_html'
   - 'use text format full_html'
+  - 'use text format restricted_html'
   - 'view all media revisions'
   - 'view all revisions'
   - 'view landing_page revisions'
