--- a/config/sata_us/default/field.field.node.page.field_media.yml
+++ b/config/sata_us/default/field.field.node.page.field_media.yml
@@ -8,6 +8,8 @@ dependencies:
     - media.type.remote_video
     - media.type.video
     - node.type.page
+  content:
+    - 'media:image:b4e1ea49-ec69-400c-9985-5634fed0edc3'
 id: node.page.field_media
 field_name: field_media
 entity_type: node
@@ -16,7 +18,10 @@ label: 'Listing Image'
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: b4e1ea49-ec69-400c-9985-5634fed0edc3
+    weight: 0
 default_value_callback: ''
 settings:
   handler: 'default:media'
