SATA Brazil - added default listing image to product and basic page content types

--- a/config/sata_brazil/default/field.field.node.page.field_media.yml
+++ b/config/sata_brazil/default/field.field.node.page.field_media.yml
@@ -8,6 +8,8 @@ dependencies:
     - media.type.remote_video
     - media.type.video
     - node.type.page
+  content:
+    - 'media:image:bebd17b5-1564-4be8-97f1-0b8a4b93d134'
 id: node.page.field_media
 field_name: field_media
 entity_type: node
@@ -16,7 +18,10 @@ label: 'Listing Image'
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: bebd17b5-1564-4be8-97f1-0b8a4b93d134
+    weight: 0
 default_value_callback: ''
 settings:
   handler: 'default:media'
