Sata EU - Added default listing image to basic page and product content

--- a/config/sata_emea/default/field.field.node.product.field_media.yml
+++ b/config/sata_emea/default/field.field.node.product.field_media.yml
@@ -9,7 +9,7 @@ dependencies:
     - media.type.video
     - node.type.product
   content:
-    - 'media:image:14b3e79b-4cf6-4718-b0e7-a105c3daf45a'
+    - 'media:image:3a832aea-c73e-4ac5-ba53-70883d257374'
 id: node.product.field_media
 field_name: field_media
 entity_type: node
@@ -20,7 +20,8 @@ required: true
 translatable: true
 default_value:
   -
-    'target_    weight': 0
+    target_uuid: 3a832aea-c73e-4ac5-ba53-70883d257374
+    weight: 0
 default_value_callback: ''
 settings:
   handler: 'default:media'
