--- a/config/sata_emea/default/field.field.node.page.field_media.yml
+++ b/config/sata_emea/default/field.field.node.page.field_media.yml
@@ -8,6 +8,8 @@ dependencies:
     - media.type.remote_video
     - media.type.video
     - node.type.page
+  content:
+    - 'media:image:3a832aea-c73e-4ac5-ba53-70883d257374'
 id: node.page.field_media
 field_name: field_media
 entity_type: node
@@ -16,7 +18,10 @@ label: 'Listing Image'
 description: ''
 required: false
 translatable: true
-default_value: {  }
+default_value:
+  -
+    target_uuid: 3a832aea-c73e-4ac5-ba53-70883d257374
+    weight: 0
 default_value_callback: ''
 settings:
   handler: 'default:media'
