--- a/config/sata_us/default/core.entity_view_display.node.page.block_title.yml
+++ b/config/sata_us/default/core.entity_view_display.node.page.block_title.yml
@@ -6,8 +6,10 @@ dependencies:
     - core.entity_view_mode.node.block_title
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_show_listing_image_on_full
     - node.type.page
   module:
     - user
@@ -22,6 +24,7 @@ hidden:
   field_link: true
   field_media: true
   field_meta_tags: true
+  field_show_listing_image_on_full: true
   langcode: true
   links: true
   search_api_excerpt: true
