--- a/config/sata_us/default/core.entity_view_display.node.page.full.yml
+++ b/config/sata_us/default/core.entity_view_display.node.page.full.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_show_listing_image_on_full
     - node.type.page
   module:
     - blazy
@@ -143,18 +144,12 @@ content:
       grid: ''
       grid_medium: ''
       grid_small: ''
-      breakpoints: {  }
-      current_view_mode: ''
-      fx: ''
-      icon: ''
-      sizes: ''
-      grid_header: ''
-      _uri: ''
     third_party_settings: {  }
     weight: 1
     region: content
 hidden:
   field_meta_tags: true
+  field_show_listing_image_on_full: true
   langcode: true
   links: true
   search_api_excerpt: true
