--- a/config/sata_brazil/default/core.entity_view_display.node.page.search_index.yml
+++ b/config/sata_brazil/default/core.entity_view_display.node.page.search_index.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_show_listing_image_on_full
     - image.style.search_teaser_261x256
     - node.type.page
   module:
@@ -76,6 +77,7 @@ hidden:
   field_components: true
   field_link: true
   field_meta_tags: true
+  field_show_listing_image_on_full: true
   langcode: true
   links: true
   search_api_excerpt: true
