--- a/config/sata_colombia/default/core.entity_view_display.node.page.full.yml
+++ b/config/sata_colombia/default/core.entity_view_display.node.page.full.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_show_listing_image_on_full
     - node.type.page
   module:
     - blazy
@@ -155,6 +156,7 @@ content:
     region: content
 hidden:
   field_meta_tags: true
+  field_show_listing_image_on_full: true
   langcode: true
   links: true
   search_api_excerpt: true
